[gd_scene load_steps=25 format=3 uid="uid://7frae6sug118"]

[ext_resource type="Script" path="res://scenes/day_03/level_02/enemies/motership/motership.gd" id="1_lyngl"]
[ext_resource type="PackedScene" uid="uid://bmfc5e84lpwkj" path="res://scenes/day_03/_shared/objects/explosion.tscn" id="2_wk4gl"]
[ext_resource type="Texture2D" uid="uid://d3876elyydfqw" path="res://art/day_3/mothership_bg.png" id="3_4nxgv"]
[ext_resource type="Texture2D" uid="uid://b6batmime15u3" path="res://art/day_3/mothership_interior.png" id="3_5chgg"]
[ext_resource type="Texture2D" uid="uid://cqradgo1f7v2y" path="res://art/day_3/object_alien.png" id="4_3xeh6"]
[ext_resource type="Script" path="res://scenes/day_03/level_02/enemies/block_spawner_weapon.gd" id="5_yw3ju"]
[ext_resource type="Script" path="res://scenes/day_03/level_02/enemies/motership/alien_hologram.gd" id="6_fhdi3"]
[ext_resource type="PackedScene" uid="uid://csyep514u36ex" path="res://scenes/day_03/level_02/enemies/block.tscn" id="6_svbuj"]
[ext_resource type="Script" path="res://scenes/day_03/level_02/enemies/motership/heat_seeker_weapon.gd" id="7_gjhag"]
[ext_resource type="PackedScene" path="res://scenes/day_03/_shared/objects/gun.tscn" id="7_rkunh"]
[ext_resource type="PackedScene" uid="uid://ceehojvd7nkaa" path="res://scenes/day_03/_shared/objects/enemy_bullet.tscn" id="8_coaat"]
[ext_resource type="Texture2D" uid="uid://dcmolxxqilyi3" path="res://art/day_3/dotted_line.png" id="9_441i0"]
[ext_resource type="PackedScene" uid="uid://spq6o43sfcc1" path="res://scenes/day_03/level_02/enemies/motership/laser_balls_cannon.tscn" id="10_oilhl"]
[ext_resource type="Script" path="res://scenes/day_03/level_02/enemies/motership/laser_balls_weapon.gd" id="11_gqj8r"]
[ext_resource type="Theme" uid="uid://y72soc2heqau" path="res://themes/theme.tres" id="11_imjsu"]
[ext_resource type="FontFile" uid="uid://d3eorbmbvko6w" path="res://art/fonts/courier_prime/CourierPrime-Bold.ttf" id="12_nf8bl"]
[ext_resource type="Texture2D" uid="uid://b8pjqd3prajm1" path="res://art/day_3/enemy_duck_block_yellow.png" id="13_8ybbm"]
[ext_resource type="Script" path="res://scenes/_shared/hurtbox.gd" id="17_s7cdp"]
[ext_resource type="PackedScene" uid="uid://dvq3mnqmcgelf" path="res://scenes/_shared/clean_up_zone.tscn" id="18_f0wfx"]
[ext_resource type="PackedScene" uid="uid://ciph4tyjsvddo" path="res://scenes/day_03/level_02/enemies/motership/pair_of_mini_balls.tscn" id="19_67e7r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lwyhk"]
size = Vector2(128, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uueik"]
size = Vector2(144, 20)

[sub_resource type="LabelSettings" id="LabelSettings_dky2g"]
font = ExtResource("12_nf8bl")

[sub_resource type="LabelSettings" id="LabelSettings_4227b"]
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_size = 4

[node name="Motership" type="Node2D"]
script = ExtResource("1_lyngl")
_hp = 500
_activate_block_spawner_at_hp = 400
_speed_up_block_spawner_at_hp = 200
_activate_heat_seeker_at_hp = 150
Explosion = ExtResource("2_wk4gl")
debug_show_hp = true

[node name="Inside" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Floor" type="Sprite2D" parent="Inside"]
z_index = -500
position = Vector2(56, 143)
texture = ExtResource("3_5chgg")
centered = false
metadata/_edit_lock_ = true

[node name="AlienHologram" type="Sprite2D" parent="Inside"]
visible = false
position = Vector2(112, 206)
texture = ExtResource("4_3xeh6")
centered = false
script = ExtResource("6_fhdi3")
_flicker_duration_sec = 0.08
metadata/_edit_lock_ = true

[node name="StartPosition" type="Marker2D" parent="Inside"]
position = Vector2(116, 255)
metadata/_edit_lock_ = true

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("3_4nxgv")
centered = false
metadata/_edit_lock_ = true

[node name="BlockSpawnerWeapon" type="Node2D" parent="." node_paths=PackedStringArray("world")]
position = Vector2(120, 142)
script = ExtResource("5_yw3ju")
world = NodePath("../Inside")
_normal_cooldown = 1.2
_sped_up_cooldown = 0.8
Block = ExtResource("6_svbuj")
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="BlockSpawnerWeapon"]
one_shot = true

[node name="HeatSeekerWeapon" type="Node2D" parent="." node_paths=PackedStringArray("world")]
position = Vector2(120, 135)
script = ExtResource("7_gjhag")
world = NodePath("../Inside")
_cooldown_sec = 3.2
_laser_sight_duration_sec = 1.2
_warning_duration_sec = 0.4
_time_between_bullets_sec = 0.08
_time_between_bursts_sec = 0.8
_bullets_per_burst = 10
metadata/_edit_lock_ = true

[node name="Gun" parent="HeatSeekerWeapon" instance=ExtResource("7_rkunh")]
z_index = -100
z_as_relative = false
Bullet = ExtResource("8_coaat")
cooldown = 8.0
ignore_cooldown = true

[node name="LaserSight" type="Line2D" parent="HeatSeekerWeapon/Gun"]
visible = false
texture_repeat = 2
points = PackedVector2Array(0, 8, 0, 136)
width = 1.0
default_color = Color(0, 0, 0, 1)
texture = ExtResource("9_441i0")
texture_mode = 1

[node name="LaserSightWarning" type="Line2D" parent="HeatSeekerWeapon/Gun"]
visible = false
points = PackedVector2Array(0, 8, 0, 136)
width = 1.0
default_color = Color(1, 0, 0, 1)

[node name="Timer" type="Timer" parent="HeatSeekerWeapon"]
one_shot = true

[node name="LaserBallsWeapon" type="Node2D" parent="."]
position = Vector2(28, 143)
script = ExtResource("11_gqj8r")
_cooldown = 1.6
is_active = true
metadata/_edit_lock_ = true

[node name="LaserBallsCannon0" parent="LaserBallsWeapon" instance=ExtResource("10_oilhl")]
metadata/_edit_lock_ = true

[node name="LaserBallsCannon1" parent="LaserBallsWeapon" instance=ExtResource("10_oilhl")]
position = Vector2(0, 32)
metadata/_edit_lock_ = true

[node name="LaserBallsCannon2" parent="LaserBallsWeapon" instance=ExtResource("10_oilhl")]
position = Vector2(0, 64)
metadata/_edit_lock_ = true

[node name="LaserBallsCannon3" parent="LaserBallsWeapon" instance=ExtResource("10_oilhl")]
position = Vector2(0, 96)
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="LaserBallsWeapon"]
one_shot = true

[node name="Weakpoint" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="WeakPointBlock0" type="Sprite2D" parent="Weakpoint"]
z_index = -50
position = Vector2(56, 127)
texture = ExtResource("13_8ybbm")
centered = false
metadata/_edit_lock_ = true

[node name="WeakPointBlock1" type="Sprite2D" parent="Weakpoint"]
z_index = -50
position = Vector2(72, 127)
texture = ExtResource("13_8ybbm")
centered = false
metadata/_edit_lock_ = true

[node name="WeakPointBlock2" type="Sprite2D" parent="Weakpoint"]
z_index = -50
position = Vector2(88, 127)
texture = ExtResource("13_8ybbm")
centered = false
metadata/_edit_lock_ = true

[node name="WeakPointBlock3" type="Sprite2D" parent="Weakpoint"]
z_index = -50
position = Vector2(104, 127)
texture = ExtResource("13_8ybbm")
centered = false
metadata/_edit_lock_ = true

[node name="WeakPointBlock4" type="Sprite2D" parent="Weakpoint"]
z_index = -50
position = Vector2(120, 127)
texture = ExtResource("13_8ybbm")
centered = false
metadata/_edit_lock_ = true

[node name="WeakPointBlock5" type="Sprite2D" parent="Weakpoint"]
z_index = -50
position = Vector2(136, 127)
texture = ExtResource("13_8ybbm")
centered = false
metadata/_edit_lock_ = true

[node name="WeakPointBlock6" type="Sprite2D" parent="Weakpoint"]
z_index = -50
position = Vector2(152, 127)
texture = ExtResource("13_8ybbm")
centered = false
metadata/_edit_lock_ = true

[node name="WeakPointBlock7" type="Sprite2D" parent="Weakpoint"]
z_index = -50
position = Vector2(168, 127)
texture = ExtResource("13_8ybbm")
centered = false
metadata/_edit_lock_ = true

[node name="Hurtbox" type="Area2D" parent="Weakpoint"]
script = ExtResource("17_s7cdp")
killer_groups = Array[String](["player_bullets"])
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weakpoint/Hurtbox"]
position = Vector2(120, 135)
shape = SubResource("RectangleShape2D_lwyhk")
debug_color = Color(0, 1, 0, 0.419608)
metadata/_edit_lock_ = true

[node name="CleanUpZoneTop" parent="." instance=ExtResource("18_f0wfx")]
position = Vector2(120, 117)
collision_mask = 18
groups = Array[String](["player_bullets"])
metadata/_edit_lock_ = true

[node name="CollisionShape2D" parent="CleanUpZoneTop" index="0"]
shape = SubResource("RectangleShape2D_uueik")

[node name="CleanUpZoneBottom" parent="." instance=ExtResource("18_f0wfx")]
position = Vector2(120, 281)
collision_mask = 18
clean_up_behavior = 1
groups = Array[String](["bullets", "enemies"])
metadata/_edit_lock_ = true

[node name="CollisionShape2D" parent="CleanUpZoneBottom" index="0"]
shape = SubResource("RectangleShape2D_uueik")

[node name="PairOfMiniBallsLeft" parent="." instance=ExtResource("19_67e7r")]
position = Vector2(8, 287)
_color_one = Color(0, 0, 1, 1)
_color_two = Color(0, 1, 0, 1)
_color_three = Color(1, 0, 0, 1)
_time_between_colors_sec = 0.2
metadata/_edit_lock_ = true

[node name="LeftMotershipBallMini" parent="PairOfMiniBallsLeft" index="0"]
color = Color(0, 0, 1, 1)

[node name="RightMotershipBallMini" parent="PairOfMiniBallsLeft" index="1"]
position = Vector2(8, 1)
color = Color(0, 0, 1, 1)

[node name="PairOfMiniBallsCenter" parent="." instance=ExtResource("19_67e7r")]
position = Vector2(104, 288)
_color_one = Color(0, 1, 0, 1)
_color_two = Color(1, 0, 0, 1)
_color_three = Color(0, 0, 1, 1)
_time_between_colors_sec = 0.2
metadata/_edit_lock_ = true

[node name="LeftMotershipBallMini" parent="PairOfMiniBallsCenter" index="0"]
color = Color(0, 1, 0, 1)

[node name="RightMotershipBallMini" parent="PairOfMiniBallsCenter" index="1"]
position = Vector2(8, 0)
color = Color(0, 1, 0, 1)

[node name="PairOfMiniBallsRight" parent="." instance=ExtResource("19_67e7r")]
position = Vector2(209, 287)
_color_one = Color(1, 0, 0, 1)
_color_two = Color(0, 0, 1, 1)
_color_three = Color(0, 1, 0, 1)
_time_between_colors_sec = 0.2
metadata/_edit_lock_ = true

[node name="LeftMotershipBallMini" parent="PairOfMiniBallsRight" index="0"]
position = Vector2(0, 1)
color = Color(1, 0, 0, 1)

[node name="RightMotershipBallMini" parent="PairOfMiniBallsRight" index="1"]
position = Vector2(8, 0)
color = Color(1, 0, 0, 1)

[node name="ExplosionsContainer" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Dialog" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme = ExtResource("11_imjsu")
metadata/_edit_lock_ = true
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Dialog"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Dialog/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "No permitiremos que acabes"
label_settings = SubResource("LabelSettings_dky2g")

[node name="FlashContainer" type="Node" parent="."]

[node name="Flash" type="ColorRect" parent="FlashContainer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Debug" type="Node" parent="."]

[node name="HpLabel" type="Label" parent="Debug"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -37.0
offset_right = 28.0
grow_horizontal = 2
grow_vertical = 0
text = "HP 500
"
label_settings = SubResource("LabelSettings_4227b")

[connection signal="visibility_changed" from="Inside/AlienHologram" to="Inside/AlienHologram" method="_on_visibility_changed"]
[connection signal="timeout" from="BlockSpawnerWeapon/Timer" to="BlockSpawnerWeapon" method="_on_timer_timeout"]
[connection signal="discharged" from="LaserBallsWeapon/LaserBallsCannon0" to="LaserBallsWeapon" method="_on_laser_balls_cannon_discharged"]
[connection signal="target_detected" from="LaserBallsWeapon/LaserBallsCannon0" to="LaserBallsWeapon" method="_on_laser_balls_cannon_target_detected"]
[connection signal="discharged" from="LaserBallsWeapon/LaserBallsCannon1" to="LaserBallsWeapon" method="_on_laser_balls_cannon_discharged"]
[connection signal="target_detected" from="LaserBallsWeapon/LaserBallsCannon1" to="LaserBallsWeapon" method="_on_laser_balls_cannon_target_detected"]
[connection signal="discharged" from="LaserBallsWeapon/LaserBallsCannon2" to="LaserBallsWeapon" method="_on_laser_balls_cannon_discharged"]
[connection signal="target_detected" from="LaserBallsWeapon/LaserBallsCannon2" to="LaserBallsWeapon" method="_on_laser_balls_cannon_target_detected"]
[connection signal="discharged" from="LaserBallsWeapon/LaserBallsCannon3" to="LaserBallsWeapon" method="_on_laser_balls_cannon_discharged"]
[connection signal="target_detected" from="LaserBallsWeapon/LaserBallsCannon3" to="LaserBallsWeapon" method="_on_laser_balls_cannon_target_detected"]
[connection signal="timeout" from="LaserBallsWeapon/Timer" to="LaserBallsWeapon" method="_on_timer_timeout"]
[connection signal="area_entered" from="Weakpoint/Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="hurt" from="Weakpoint/Hurtbox" to="." method="_on_hurtbox_hurt"]

[editable path="CleanUpZoneTop"]
[editable path="CleanUpZoneBottom"]
[editable path="PairOfMiniBallsLeft"]
[editable path="PairOfMiniBallsCenter"]
[editable path="PairOfMiniBallsRight"]
